Add links to our websites

--- a/index.Rmd
+++ b/index.Rmd
@@ -35,7 +35,7 @@ Refer to your section's _D2L Announcements_ page for your
 instructor and co-instructor/TA contact information.
 
 ## Student Success Coordinator
-**Jade Schmidt**  
+[**Jade Schmidt**](http://www.math.montana.edu/directory/faculty/1524571/jade-schmidt){target="_blank"}  
 email: jade.schmidt2@montana.edu  
 Office: Wilson 2-263  
 Phone: (406) 994-6557
@@ -43,7 +43,7 @@ Phone: (406) 994-6557
 ---
 
 ## Assistant Coordinator
-**Melinda Yager**  
+[**Melinda Yager**](http://www.math.montana.edu/directory/faculty/1582830/melinda-yager){target="_blank"}  
 email: melinda.yager@montana.edu  
 Office: Wilson 1-145  
 Phone: (406) 994-6876
@@ -51,7 +51,7 @@ Phone: (406) 994-6876
 ---
 
 ## Course Supervisor
-**Dr. Stacey Hancock**  
+[**Dr. Stacey Hancock**](http://www.math.montana.edu/shancock/){target="_blank"}  
 email: stacey.hancock@montana.edu  
 Office: Wilson 2-195  
 Phone: (406) 993-5350  
