--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ pal <- brewer.pal(6, 'Pastel1')
 
 ---
 
-> **_NOTE_**: This syllabus is only for blended sections of STAT 216. For online sections of STAT 216, refer to the [online section syllabus](http://www.math.montana.edu/courses/s216/syllabus.html).
+> **_NOTE_**: This syllabus is for blended sections of STAT 216 only. For online sections of STAT 216, refer to the [online section syllabus](http://www.math.montana.edu/courses/s216/syllabus.html).
 
 ---
 
