Clarify academic misconduct statement

--- a/index.Rmd
+++ b/index.Rmd
@@ -284,7 +284,7 @@ When students fail to adhere to these responsibilities, they may intentionally o
 
 Plagiarism is an act of academic misconduct, which carries with it consequences including, but not limited to, receiving a course grade of “F” and a report to the Office of the Dean of Students. Unfortunately, it is not always clear if the misuse of sources is intentional or unintentional, which means that you may be accused of plagiarism even if you do not intentionally plagiarize. If you have any questions regarding use and citation of sources in your academic writing, you are responsible for consulting with your instructor before the assignment due date. In addition, you can work with an MSU Writing Center tutor at any point in your writing process, including when you are integrating or citing sources. You can make an appointment and find citation resources at www.montana.edu/writingcenter.
 
-**In STAT 216, students involved in plagiarism on assignments (all parties involved) will receive a warning on the first offense and a 50% reduction in score. The second offense will result in a zero on that assignment, and the incident will be reported to the Dean of Students. Academic misconduct on an exam will result in a zero on that exam and will be reported to the Dean of Students, without exception.**
+**In STAT 216, students involved in plagiarism on assignments (all parties involved) will receive a zero grade on that assignment. The second offense will result in a zero on that assignment, and the incident will be reported to the Dean of Students. Academic misconduct on an exam will result in a zero on that exam and will be reported to the Dean of Students, without exception.**
 
 [More information about Academic Misconduct from the Dean of Students](https://www.montana.edu/deanofstudents/syllabus.html)
 
