Add virtual machine info

--- a/index.Rmd
+++ b/index.Rmd
@@ -135,7 +135,7 @@ We will be using the statistical software [R](https://www.r-project.org/) throug
 
 2. Use RStudio through the [RStudio Cloud](https://login.rstudio.cloud/register?redirect=https%3A%2F%2Fclient.login.rstudio.cloud%2Foauth%2Flogin%3Fshow_auth%3D0%26show_login%3D1%26show_setup%3D1). This resource allows you to use RStudio through a web browser. It is free for use, but it does limit you to a certain number of project hours per month.
 
-3. Use RStudio through an MSU [virtual machine](https://studentlabs.montana.edu/remotelabs/howto.html).
+3. Use RStudio through an MSU [virtual machine](https://studentlabs.montana.edu/remotelabs/howto.html). Use your NetID to log in at [remotelabs.msu.montana.edu](https://remotelabs.msu.montana.edu/), then click on "CLS-STAT-REMOTE". If you do not see an option for "CLS-STAT-REMOTE", please email Student Success Coordinator, [Jade Schmidt](mailto:jade.schmidt2@montana.edu)
 
 4. Use RStudio in an MSU on-campus computer lab. 
 
